

plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.13'
    id("org.beryx.jlink") version "3.0.1"
}

group = 'klik'
version = '0.9.0'

repositories {
    mavenCentral()
    gradlePluginPortal()
}

compileJava {
    // this is needed to enable the virtual threads preview feature in java20
    //options.compilerArgs += ['--enable-preview']
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}


def main_class_name = 'klik.Klik_application'

application {
    mainModule = 'klikmodule'
    mainClass = main_class_name

    // Java VM RAM size options:
    applicationDefaultJvmArgs = ["-XX:MaxRAMPercentage=90.0"]
    // if you have 16GB or more and want to give a lot of RAM to klik to be able to maintain a lot of open windows:
    //applicationDefaultJvmArgs = ["-Xms10G","-Xmx10G"]
    // if you have only 2GB or not much more:
    //applicationDefaultJvmArgs = ["-Xms1G"]
}

javafx {
    version = "21"
    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.swing','javafx.graphics','javafx.media' ]
}


jar {
    manifest {
        attributes(
                'Main-Class': main_class_name
        )
    }
}

dependencies {
    // EXIF reader
    implementation 'com.drewnoakes:metadata-extractor:2.18.0'
    // Cache
    implementation group: 'com.github.ben-manes.caffeine', name: 'caffeine', version: '3.1.1'
    // files etc
    implementation group: 'commons-io', name: 'commons-io', version: '2.11.0'
    // PDF icons
    implementation 'org.apache.pdfbox:pdfbox:3.0.0-RC1'

}


